--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.15",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
