--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,7 @@
         "alwaysStrict": true,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
-        "noImplicitReturns": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true
+        "noImplicitReturns": true
     },
     "exclude": [
         "node_modules",
