--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@types/node": "^6.0.52",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^4.1.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.0",
+    "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
     "tslint": "^4.1.0",
     "tslint-loader": "^3.3.0",
