--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
         "alwaysStrict": true,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
-        "noImplicitReturns": true
+        "noImplicitReturns": true,
+        "types": ["node"]
     },
     "exclude": [
         "node_modules",
