--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^6.0.52",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "css-to-string-loader": "^0.1.2",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^4.1.0",
     "raw-loader": "^0.5.1",
