--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-rc.4",
+    "rxjs": "^5.0.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
@@ -31,16 +31,17 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "css-to-string-loader": "^0.1.2",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^4.1.0",
     "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
     "tslint": "^4.1.0",
     "tslint-loader": "^3.3.0",
     "typescript": "^2.1.4",
-    "typings": "^2.0.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
