Enable turning on and off production mode.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,5 @@
         "noImplicitReturns": true,
         "types": ["node"]
     },
-    "exclude": [
-        "node_modules",
-        "typings"
-    ]
+    "exclude": ["node_modules"]
 }
