--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "webpack-dev-server --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jehugaleahsa/Learning-Angular2-Webpack-Bootstrap4"
+  },
   "author": "Travis Parks",
   "license": "Unlicense",
   "dependencies": {
