--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "lint": "tslint ./src/**/.ts",
-    "start": "webpack-dev-server --config webpack.config.js",
+    "start": "webpack-dev-server --config webpack.config.js --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,7 +34,6 @@
     "@types/node": "^6.0.52",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
-    "css-to-string-loader": "^0.1.2",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^4.1.0",
@@ -46,6 +45,7 @@
     "tslint": "^4.1.0",
     "tslint-loader": "^3.3.0",
     "typescript": "^2.1.4",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
