--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,11 @@
         "lib": ["es2015", "dom"],
         "noImplicitAny": true,
         "pretty": true,
-        "suppressImplicitAnyIndexErrors": true,
         "alwaysStrict": true,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
+        "noImplicitThis": true,
         "types": ["node"]
     },
     "exclude": ["node_modules"]
