--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Learning Angular 2, TypeScript and Boostrap 4",
   "scripts": {
-    "build": "webpack --progress --config webpack.config.js",
-    "build:prod": "webpack -p --progress --optimize-minimize --config webpack.config.js",
+    "build": "cross-env NODE_ENV=debug webpack --progress --config webpack.config.js",
+    "build:release": "cross-env NODE_ENV=release webpack --progress --config webpack.config.js",
     "lint": "tslint ./src/**/.ts",
-    "start": "webpack-dev-server --progress --config webpack.config.js",
-    "start:optimized": "webpack-dev-server --progress --optimize-minimize --config webpack.config.js",
+    "start": "cross-env NODE_ENV=debug webpack-dev-server --progress --config webpack.config.js",
+    "start:release": "cross-env NODE_ENV=release webpack-dev-server --progress --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/node": "^6.0.52",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
@@ -49,7 +50,7 @@
     "tslint-loader": "^3.3.0",
     "typescript": "^2.1.4",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^2.2.0-rc.2",
+    "webpack-dev-server": "^2.2.0-rc.0"
   }
 }
