--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.17.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "@types/node": "^6.0.52",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.3",
