--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@angular/platform-browser": "^2.4.2",
     "@angular/platform-browser-dynamic": "^2.4.2",
     "@angular/router": "^3.4.2",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.17",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.17.1",
+    "ng-spin-kit": "^2.0.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "^5.0.3",
     "zone.js": "^0.7.4"
