--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   "author": "Travis Parks",
   "license": "Unlicense",
   "dependencies": {
-    "@angular/common": "^2.4.3",
-    "@angular/compiler": "^2.4.3",
-    "@angular/core": "^2.4.3",
-    "@angular/forms": "^2.4.3",
-    "@angular/http": "^2.4.3",
-    "@angular/platform-browser": "^2.4.3",
-    "@angular/platform-browser-dynamic": "^2.4.3",
-    "@angular/router": "^3.4.3",
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/core": "^2.4.4",
+    "@angular/forms": "^2.4.4",
+    "@angular/http": "^2.4.4",
+    "@angular/platform-browser": "^2.4.4",
+    "@angular/platform-browser-dynamic": "^2.4.4",
+    "@angular/router": "^3.4.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
@@ -33,18 +33,18 @@
     "ng-spin-kit": "^2.0.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "^5.0.3",
-    "zone.js": "^0.7.4"
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@types/moment": "^2.13.0",
-    "@types/node": "^6.0.58",
+    "@types/node": "^7.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.26.0",
-    "node-sass": "^4.2.0",
+    "node-sass": "^4.3.0",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
@@ -52,9 +52,9 @@
     "ts-loader": "^1.3.3",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
-    "typescript": "^2.1.4",
+    "typescript": "^2.1.5",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.0-rc.3",
-    "webpack-dev-server": "^2.2.0-rc.0"
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0"
   }
 }
