--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "ng-spin-kit": "^2.0.0",
     "reflect-metadata": "^0.1.9",
@@ -36,6 +37,7 @@
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.52",
     "@types/moment": "^2.13.0",
     "@types/node": "^7.0.0",
     "copy-webpack-plugin": "^4.0.1",
