--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "ng-spin-kit": "^2.0.0",
